# paketkoll

./: .gitignore  .rustfmt.toml  Cargo.toml  Cross.toml  Makefile  README.md  about.hbs  about.toml  clippy.toml  deny.toml  release-plz.toml
.config/: hakari.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  support_request.md
.github/workflows/: act_build.yml  act_build_release.yml  act_lint.yml  act_mdbook.yml  action_build_release.yml  build.yml  ci-dev.yml  ci.yml  lint.yml  mdbook.yml  release-plz.yml  release.yml  site-release.yml
crates/konfigkoll/: CHANGELOG.md  Cargo.toml  README.md
crates/konfigkoll/data/template/: _gitignore  main.rn  unsorted.rn
crates/konfigkoll/src/: apply.rs  cli.rs  fs_scan.rs  init.rs  lib.rs  main.rs  pkgs.rs  save.rs
crates/konfigkoll_core/: CHANGELOG.md  Cargo.toml  README.md
crates/konfigkoll_core/examples/: multi_confirm_demo.rs
crates/konfigkoll_core/src/: apply.rs  confirm.rs  conversion.rs  diff.rs  lib.rs  line_edit.rs  save.rs  state.rs  utils.rs
crates/konfigkoll_hwinfo/: CHANGELOG.md  Cargo.toml  README.md
crates/konfigkoll_hwinfo/src/: lib.rs  pci.rs
crates/konfigkoll_hwinfo/src/pci/: parser.rs  types.rs
crates/konfigkoll_rune/: Cargo.toml  README.md
crates/konfigkoll_rune/src/: main.rs
crates/konfigkoll_script/: CHANGELOG.md  Cargo.toml  README.md
crates/konfigkoll_script/src/: engine.rs  lib.rs  plugins.rs  types.rs
crates/konfigkoll_script/src/plugins/: command.rs  error.rs  filesystem.rs  host_fs.rs  package_managers.rs  passwd.rs  patch.rs  process.rs  properties.rs  regex.rs  settings.rs  shell.rs  sysinfo.rs  systemd.rs
crates/konfigkoll_script/src/plugins/passwd/: sysusers.rs
crates/konfigkoll_types/: CHANGELOG.md  Cargo.toml  README.md
crates/konfigkoll_types/src/: lib.rs  misc.rs  operations.rs
crates/konfigkoll_utils/: CHANGELOG.md  Cargo.toml  README.md
crates/konfigkoll_utils/src/: lib.rs  line_edit.rs  utils.rs
crates/mtree2/: CHANGELOG.md  Cargo.toml  README.md
crates/mtree2/examples/: gedit.mtree  not_unicode.mtree  not_unicode_netbsd6.mtree  read_mtree.rs  relative_paths.mtree  relative_paths_wrapped.mtree  test_freebsd9.mtree
crates/mtree2/src/: lib.rs  parser.rs  util.rs
crates/mtree2/tests/: smoke.rs  snapshots.rs
crates/mtree2/tests/data/: invalid_double_filename.mtree  relative_paths_wrapped_at_EOF.mtree  relative_paths_wrapped_exceeding_root.mtree  test_mtree.mtree  test_netbsd6.mtree  xterm.mtree
crates/mtree2/tests/snapshots/: snapshots__freebsd9_flavor.snap  snapshots__gedit.snap  snapshots__invalid_double_filename.snap  snapshots__mtree_flavor.snap  snapshots__netbsd6_flavor.snap  snapshots__netbsd6_flavor_with_netbsd6_feature_disabled.snap  snapshots__not_unicode_netbsd6_flavor.snap  snapshots__relative_paths.snap  snapshots__wrapped_lines.snap  snapshots__wrapped_lines_EOF.snap  snapshots__wrapped_lines_exceeding_root.snap  snapshots__wrapped_lines_invalid.snap  snapshots__xterm.snap
crates/paketkoll/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/paketkoll/src/: cli.rs  conversion.rs  lib.rs  main.rs
crates/paketkoll_cache/: CHANGELOG.md  Cargo.toml  README.md
crates/paketkoll_cache/src/: from_archives.rs  lib.rs  original_files.rs  utils.rs
crates/paketkoll_core/: CHANGELOG.md  Cargo.toml  README.md
crates/paketkoll_core/src/: backend.rs  config.rs  file_ops.rs  lib.rs  package_ops.rs  types.rs  utils.rs
crates/paketkoll_core/src/backend/: arch.rs  common.rs  deb.rs  filesystem.rs  flatpak.rs  systemd_tmpfiles.rs
crates/paketkoll_core/src/backend/arch/: desc.rs  mtree.rs  pacman_conf.rs
crates/paketkoll_core/src/backend/deb/: divert.rs  parsers.rs
crates/paketkoll_core/src/mtree/: mod.rs  parser.rs  util.rs
crates/paketkoll_core/src/types/: files.rs  issue.rs  package.rs
crates/paketkoll_types/: CHANGELOG.md  Cargo.toml  README.md
crates/paketkoll_types/src/: backend.rs  files.rs  intern.rs  issue.rs  lib.rs  package.rs  utils.rs
crates/paketkoll_utils/: CHANGELOG.md  Cargo.toml  README.md
crates/paketkoll_utils/src/: checksum.rs  lib.rs
crates/paketkoll_workspace_hack/: Cargo.toml  README.md
crates/systemd_tmpfiles/: CHANGELOG.md  Cargo.toml  README.md
crates/systemd_tmpfiles/src/: architecture.rs  lib.rs  parser.rs  specifier.rs  types.rs
crates/systemd_tmpfiles/src/parser/: file.rs
crates/xtask/: Cargo.toml  README.md
crates/xtask/src/: cli.rs  main.rs
doc/: .gitignore  book.toml
doc/src/: README.md  SUMMARY.md
doc/src/konfigkoll/: api.md  cookbook.md  defaults.md  files.md  getting_started.md  installation.md  limitations.md  packages.md
doc/src/konfigkoll/advanced/: README.md  host_file_system_access.md  process.md
doc/src/konfigkoll/dev/: design.md
doc/src/konfigkoll/integrations/: README.md  passwd.md  sysinfo.md  systemd_units.md
integration_tests/: .gitignore  run_tests.sh
integration_tests/arch/basic_config/: main.rn  test.sh  test_runner_inner.sh
integration_tests/arch/basic_config/expected/: 1_output.txt  1_unsorted.rn  2_output.txt  3_output.txt
integration_tests/images/arch/: Containerfile  build_image.sh  test_runner.sh  test_runner_inner.sh
site/: index.html
