[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
ahash = "0.8.11"
ar = "0.9.0"
base64-simd = "0.8.0"
bitflags = { version = "2.6.0", features = ["serde"] }
bstr = "1.10.0"
bzip2 = "0.4.4"
cached = { version = "0.53.1", features = [
    "disk_store",
    "ahash",
], default-features = false }
camino = "1.1.9"
cfg-if = "1.0.0"
clap = { version = "4.5.17", features = ["derive"] }
clap_complete = "4.5.26"
clap_mangen = "0.2.23"
clru = "0.6.2"
color-eyre = "0.6.3"
compact_str = { version = "0.8.0", features = ["serde", "smallvec"] }
console = "0.15.8"
dashmap = "6.1.0"
derive_builder = "0.20.1"
directories = "5.0.1"
dirs = "5.0.1"
duct = "0.13.7"
either = "1.13.0"
eyre = "0.6.12"
faster-hex = { version = "0.9.0", default-features = false, features = [
    "std",
] }
flate2 = { version = "1.0.33", default-features = false, features = [
    "zlib-ng",
] }
flume = { version = "0.11.0", default-features = false }
glob = "0.3.1"
globset = "0.4.14"
ignore = { version = "0.4.22", features = ["simd-accel"] }
indoc = "2.0.5"
itertools = "0.13.0"
lasso = { version = "0.7.3", features = [
    "ahasher",
    "inline-more",
    "multi-threaded",
] }
libc = "0.2.158"
md-5 = "0.10.6"
memchr = "2.7.4"
mimalloc = "0.1.43"
nix = { version = "0.29.0", default-features = false }
num_cpus = "1.16.0"
os_info = { version = "3.8.2", default-features = false }
ouroboros = "0.18.4"
parking_lot = "0.12.3"
phf = { version = "0.11.2", features = ["macros"] }
pretty_assertions = "1.4.0"
proc-exit = "2.0.2"
rayon = "1.10.0"
regex = "1.10.6"
ring = "0.17.8"
rune = "0.13.4"
rune-modules = { version = "0.13.4", features = [
    "json",
    "process",
    "tokio",
    "toml",
] }
rust-ini = "0.21.1"
scopeguard = "1.2.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_bytes = "0.11.15"
serde_json = "1.0.128"
smallvec = { version = "1.13.2", features = [
    "const_generics",
    "const_new",
    "serde",
    "union",
] }
strum = { version = "0.26.3", features = ["derive"] }
sysinfo = { version = "0.31.4", default-features = false, features = [
    "multithread",
    "system",
] }
tar = "0.4.41"
tempfile = "3.12.0"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = [
    "macros",
    "parking_lot",
    "process",
    "rt",
] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "parking_lot",
] }
winnow = { version = "0.6.18", features = ["simd"] }
xz2 = "0.1.7"
zstd = "0.13.2"

[workspace.lints.rust]
rust-2018-idioms = "warn"

[workspace.lints.clippy]
doc_markdown = "warn"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_doc = "warn"
unwrap_used = "warn"
wildcard_imports = "warn"

[profile.dev]
debug = 2
split-debuginfo = "unpacked"

[profile.release]
lto = "thin"
opt-level = 2

[profile.profiling]
debug = 2
inherits = "release"
lto = false

[profile.dev.package]
# Needed for reasonable performance
flate2.opt-level = 2
libz-ng-sys.opt-level = 2
md-5.opt-level = 2
proc-macro2.opt-level = 2
quote.opt-level = 2
ring.opt-level = 2
rune-macros.opt-level = 2
serde_derive.opt-level = 2
syn.opt-level = 2
zstd-safe.opt-level = 2
zstd-sys.opt-level = 2
zstd.opt-level = 2

#[patch.crates-io]
## Rune
#rune = { path = "patches/rune/crates/rune" }
