[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
ahash = "0.8.11"
annotate-snippets = { version = "0.11.5", features = ["simd"] }
ar = "0.9.0"
base64-simd = "0.8.0"
bitflags = { version = "2.9.0", features = ["serde"] }
bstr = "1.11.3"
bzip2 = "0.5.2"
cached = { version = "0.55.1", features = [
    "ahash",
    "disk_store",
], default-features = false }
camino = "1.1.9"
cfg-if = "1.0.0"
clap = { version = "4.5.35", features = ["derive"] }
clap_complete = "4.5.47"
clap_mangen = "0.2.26"
clru = "0.6.2"
color-eyre = "0.6.3"
compact_str = { version = "0.9.0", features = ["serde", "smallvec"] }
console = "0.15.11"
dashmap = "6.1.0"
derive_builder = "0.20.2"
directories = "6.0.0"
dirs = "6.0.0"
duct = "0.13.7"
either = "1.15.0"
eyre = "0.6.12"
faster-hex = { version = "0.10.0", default-features = false, features = [
    "std",
] }
flate2 = { version = "1.1.1", default-features = false, features = ["zlib-rs"] }
flume = { version = "0.11.1", default-features = false }
glob = "0.3.2"
globset = "0.4.16"
hashify = "0.2.6"
ignore = { version = "0.4.23", features = ["simd-accel"] }
indoc = "2.0.6"
itertools = "0.14.0"
lasso = { version = "0.7.3", features = [
    "ahasher",
    "inline-more",
    "multi-threaded",
] }
libc = "0.2.171"
md-5 = "0.10.6"
memchr = "2.7.4"
mimalloc = "=0.1.44"
nix = { version = "0.29.0", default-features = false }
num_cpus = "1.16.0"
os_info = { version = "3.10.0", default-features = false }
ouroboros = "0.18.5"
parking_lot = "0.12.3"
pretty_assertions = "1.4.1"
proc-exit = "2.0.2"
rayon = "1.10.0"
regex = "1.11.1"
ring = "0.17.14"
rune = "0.13.4"
rune-modules = { version = "0.13.4", features = [
    "json",
    "process",
    "tokio",
    "toml",
] }
rust-ini = "0.21.1"
scopeguard = "1.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"
serde_json = "1.0.140"
smallvec = { version = "1.15.0", features = [
    "const_generics",
    "const_new",
    "serde",
    "union",
] }
strum = { version = "0.27.1", features = ["derive"] }
sysinfo = { version = "0.34.2", default-features = false, features = [
    "multithread",
    "system",
] }
tar = "0.4.44"
tempfile = "3.19.1"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = [
    "macros",
    "parking_lot",
    "process",
    "rt",
] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "parking_lot",
] }
winnow = { version = "0.7.4", features = ["simd"] }
xz2 = "0.1.7"
zstd = "0.13.3"

[workspace.lints.rust]
elided_lifetimes_in_paths = "warn"
keyword_idents = "warn"
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
redundant_lifetimes = "warn"
rust_2018_idioms = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

[workspace.lints.clippy]
assigning_clones = "warn"
cast_lossless = "warn"
cloned_instead_of_copied = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
equatable_if_let = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
format_push_string = "warn"
ignored_unit_patterns = "warn"
manual_assert = "warn"
manual_let_else = "warn"
manual_string_new = "warn"
needless_pass_by_value = "warn"
or_fun_call = "warn"
ptr_as_ptr = "warn"
redundant_clone = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
type_repetition_in_bounds = "warn"
undocumented_unsafe_blocks = "warn"
uninlined_format_args = "warn"
unnecessary_box_returns = "warn"
unnecessary_safety_doc = "warn"
unnested_or_patterns = "warn"
unwrap_used = "warn"
use_self = "warn"
wildcard_imports = "warn"

[profile.dev]
debug = 2
split-debuginfo = "unpacked"

[profile.release]
lto = "thin"
opt-level = 2

[profile.profiling]
debug = 2
inherits = "release"
lto = false

[profile.dev.package]
# Needed for reasonable performance
flate2.opt-level = 2
libz-rs-sys.opt-level = 2
md-5.opt-level = 2
proc-macro2.opt-level = 2
quote.opt-level = 2
ring.opt-level = 2
rune-macros.opt-level = 2
serde_derive.opt-level = 2
syn.opt-level = 2
zlib-rs.opt-level = 2
zstd.opt-level = 2
zstd-safe.opt-level = 2
zstd-sys.opt-level = 2

#[patch.crates-io]
## Rune
#rune = { path = "patches/rune/crates/rune" }
