[package]
categories = ["os::unix-apis", "config"]
description = "Core functionality for Konfigkoll"
edition = "2021"
keywords = ["konfigkoll"]
license = "MPL-2.0"
name = "konfigkoll_core"
repository = "https://github.com/VorpalBlade/paketkoll"
rust-version = "1.80.0"
version = "0.5.0"

[dependencies]
ahash.workspace = true
camino.workspace = true
clru.workspace = true
color-eyre.workspace = true
compact_str.workspace = true
console.workspace = true
duct.workspace = true
either.workspace = true
eyre.workspace = true
itertools.workspace = true
konfigkoll_types = { version = "0.2.3", path = "../konfigkoll_types" }
libc.workspace = true
nix = { workspace = true, features = ["user"] }
paketkoll_types = { version = "0.2.1", path = "../paketkoll_types" }
paketkoll_utils = { version = "0.1.6", path = "../paketkoll_utils" }
parking_lot.workspace = true
rayon.workspace = true
smallvec.workspace = true
strum.workspace = true
tracing.workspace = true

[lints]
workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[[example]]
name = "multi_confirm_demo"
path = "examples/multi_confirm_demo.rs"
