[package]
categories = ["os::unix-apis"]
description = "Hardware info provider for Konfigkoll"
edition = "2021"
keywords = ["hardware", "system-info"]
license = "MPL-2.0"
name = "konfigkoll_hwinfo"
repository = "https://github.com/VorpalBlade/paketkoll"
rust-version = "1.80.0"
version = "0.1.5"

[features]
rune = ["dep:rune"]

[dependencies]
ahash.workspace = true
eyre.workspace = true
itertools.workspace = true
rune = { workspace = true, optional = true }
winnow.workspace = true

[lints]
workspace = true

[dev-dependencies]
indoc.workspace = true
pretty_assertions = { workspace = true }
