[package]
categories = [
    "command-line-utilities",
    "filesystem",
    "os::linux-apis",
    "config",
]
description = "Konfigkoll is a configuration management tool for Arch Linux and Debian (and derivatives)"
edition = "2021"
keywords = ["apt", "arch-linux", "debian", "pacman", "config-management"]
license = "MPL-2.0"
name = "konfigkoll_rune"
repository = "https://github.com/VorpalBlade/paketkoll"
rust-version = "1.79.0"
version = "0.1.0"

[dependencies]
konfigkoll_script = { version = "0.1.0", path = "../konfigkoll_script" }
rune = { workspace = true, features = ["cli"] }

[target.'cfg(target_env = "musl")'.dependencies]
# The allocator on musl is attrociously slow, so we use a custom one.
# Jemalloc doesn't work reliably on Aarch64 due to varying page size, so use
# the slightly slower mimalloc instead.
mimalloc.workspace = true

[lints]
workspace = true
