[package]
description = "Scripting language for Konfigkoll (not for direct public use)"
edition = "2021"
license = "MPL-2.0"
name = "konfigkoll_script"
repository = "https://github.com/VorpalBlade/paketkoll"
rust-version = "1.80.0"
version = "0.1.3"

[dependencies]
ahash.workspace = true
anyhow.workspace = true
camino.workspace = true
compact_str.workspace = true
glob.workspace = true
globset.workspace = true
itertools.workspace = true
konfigkoll_hwinfo = { version = "0.1.2", path = "../konfigkoll_hwinfo", features = [
    "rune",
] }
konfigkoll_types = { version = "0.1.3", path = "../konfigkoll_types" }
konfigkoll_utils = { version = "0.1.2", path = "../konfigkoll_utils" }
paketkoll_types = { version = "0.1.3", path = "../paketkoll_types" }
parking_lot.workspace = true
regex.workspace = true
rune-modules.workspace = true
rune.workspace = true
rust-ini.workspace = true
sysinfo.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
winnow.workspace = true

[lints]
workspace = true

[dev-dependencies]
indoc.workspace = true
pretty_assertions.workspace = true
