[package]
categories = ["os::unix-apis"]
description = "Scripting language for Konfigkoll (not for direct public use)"
edition = "2021"
keywords = ["scripting-language", "rune", "konfigkoll"]
license = "MPL-2.0"
name = "konfigkoll_script"
repository = "https://github.com/VorpalBlade/paketkoll"
rust-version = "1.80.0"
version = "0.1.6"

[dependencies]
ahash.workspace = true
camino.workspace = true
color-eyre.workspace = true
compact_str.workspace = true
eyre.workspace = true
glob.workspace = true
globset.workspace = true
itertools.workspace = true
konfigkoll_hwinfo = { version = "0.1.5", path = "../konfigkoll_hwinfo", features = [
    "rune",
] }
konfigkoll_types = { version = "0.2.2", path = "../konfigkoll_types" }
konfigkoll_utils = { version = "0.1.5", path = "../konfigkoll_utils" }
paketkoll_types = { version = "0.2.1", path = "../paketkoll_types" }
parking_lot.workspace = true
regex.workspace = true
rune-modules.workspace = true
rune.workspace = true
rust-ini.workspace = true
sysinfo.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
winnow.workspace = true

[lints]
workspace = true

[dev-dependencies]
indoc.workspace = true
pretty_assertions.workspace = true
