[package]
description = "Type definitions for konfigkoll backend (internal helper crate)"
edition = "2021"
license = "MPL-2.0"
name = "konfigkoll_types"
repository = "https://github.com/VorpalBlade/paketkoll"
rust-version = "1.80.0"
version = "0.2.1"

[dependencies]
camino.workspace = true
compact_str.workspace = true
either.workspace = true
eyre.workspace = true
paketkoll_types = { version = "0.2.0", path = "../paketkoll_types" }
paketkoll_utils = { version = "0.1.5", path = "../paketkoll_utils" }
strum.workspace = true

[lints]
workspace = true
