[package]
description = "Type definitions for konfigkoll backend (internal helper crate)"
edition = "2024"
keywords = ["konfigkoll"]
license = "MPL-2.0"
name = "konfigkoll_types"
repository = "https://github.com/VorpalBlade/paketkoll"
rust-version = "1.85.0"
version = "0.2.6"

[dependencies]
camino.workspace = true
compact_str.workspace = true
either.workspace = true
eyre.workspace = true
paketkoll_types = { version = "0.2.4", path = "../paketkoll_types" }
paketkoll_utils = { version = "0.1.9", path = "../paketkoll_utils" }
paketkoll_workspace_hack = { version = "0.1", path = "../paketkoll_workspace_hack" }
strum.workspace = true

[lints]
workspace = true
