[package]
description = "Konfigkoll utilities"
edition = "2021"
keywords = ["konfigkoll"]
license = "MPL-2.0"
name = "konfigkoll_utils"
repository = "https://github.com/VorpalBlade/paketkoll"
rust-version = "1.80.0"
version = "0.1.7"

[dependencies]
camino.workspace = true
compact_str.workspace = true
paketkoll_workspace_hack = { version = "0.1", path = "../paketkoll_workspace_hack" }
regex.workspace = true
tracing.workspace = true

[lints]
workspace = true
