[package]
authors = ["Richard Dodd <richard.o.dodd@gmail.com>", "Arvid Norlander"]
categories = ["parsing", "os::unix-apis", "filesystem"]
description = "A crate for iterating through the entries of an mtree record file."
edition = "2021"
license = "Apache-2.0 OR MIT"
name = "mtree2"
readme = "README.md"
repository = "https://github.com/VorpalBlade/paketkoll"
version = "0.6.7"

[dependencies]
bitflags.workspace = true
faster-hex.workspace = true
memchr.workspace = true
smallvec.workspace = true

[lints]
workspace = true
