[package]
authors = ["Richard Dodd <richard.o.dodd@gmail.com>", "Arvid Norlander"]
categories = ["parsing", "os::unix-apis", "filesystem"]
description = "A crate for iterating through the entries of an mtree record file."
edition = "2024"
keywords = ["mtree", "checksum", "file", "manifest"]
license = "Apache-2.0 OR MIT"
name = "mtree2"
readme = "README.md"
repository = "https://github.com/VorpalBlade/paketkoll"
version = "0.6.9"

[dependencies]
bitflags.workspace = true
faster-hex.workspace = true
memchr.workspace = true
paketkoll_workspace_hack = { version = "0.1", path = "../paketkoll_workspace_hack" }
smallvec.workspace = true

[lints]
workspace = true
