[package]
authors = ["Arvid Norlander", "Richard Dodd <richard.o.dodd@gmail.com>"]
categories = ["filesystem", "os::unix-apis", "parsing"]
description = "A crate for iterating through the entries of an mtree record file."
edition = "2024"
keywords = ["checksum", "file", "manifest", "mtree"]
license = "Apache-2.0 OR MIT"
name = "mtree2"
readme = "README.md"
repository = "https://github.com/VorpalBlade/paketkoll"
version = "0.6.10"

[dependencies]
bitflags.workspace = true
faster-hex.workspace = true
memchr.workspace = true
paketkoll_workspace_hack = { version = "0.1", path = "../paketkoll_workspace_hack" }
smallvec.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
