[package]
categories = ["command-line-utilities", "filesystem", "os::linux-apis"]
description = "Check installed distro files for changes"
edition = "2021"
keywords = ["apt", "arch-linux", "debian", "pacman", "package-management"]
license = "MPL-2.0"
name = "paketkoll"
readme = "../../README.md"
repository = "https://github.com/VorpalBlade/paketkoll"
rust-version = "1.79.0"
version = "0.2.3"

[features]
# Default features
default = ["debian", "arch_linux", "json"]

# Include the Arch Linux backend
arch_linux = ["paketkoll_core/arch_linux"]

# Include support for the Debian backend
debian = ["paketkoll_core/debian"]

# Include support for the systemd-tmpfiles backend (EXPERIMENTAL)
systemd_tmpfiles = ["paketkoll_core/systemd_tmpfiles"]

# Include support for exporting to JSON
json = ["dep:serde_json", "paketkoll_core/serde", "serde"]
serde = ["dep:serde"]

[dependencies]
ahash.workspace = true
anyhow = { workspace = true, features = ["backtrace"] }
clap = { workspace = true, features = ["derive"] }
compact_str.workspace = true
env_logger.workspace = true
log.workspace = true
os_info.workspace = true
paketkoll_core = { version = "0.4.1", path = "../paketkoll_core" }
proc-exit.workspace = true
rayon.workspace = true
serde = { workspace = true, optional = true, features = ["serde_derive"] }
serde_json = { workspace = true, optional = true }

[target.'cfg(target_env = "musl")'.dependencies]
# The allocator on musl is attrociously slow, so we use a custom one.
# Jemalloc doesn't work reliably on Aarch64 due to varying page size, so use
# the slightly slower mimalloc instead.
mimalloc.workspace = true

[build-dependencies]
clap = { workspace = true, features = ["derive"] }
clap_complete.workspace = true
clap_mangen.workspace = true
compact_str.workspace = true

[lints]
workspace = true
