[package]
categories = ["command-line-utilities", "filesystem", "os::linux-apis"]
description = "Check installed distro files for changes"
edition = "2024"
keywords = ["apt", "arch-linux", "debian", "package-management", "pacman"]
license = "MPL-2.0"
name = "paketkoll"
readme = "README.md"
repository = "https://github.com/VorpalBlade/paketkoll"
rust-version = "1.85.0"
version = "0.3.10"

[features]
# Default features
default = ["arch_linux", "debian", "json", "vendored"]

# Include the Arch Linux backend
arch_linux = ["paketkoll_core/arch_linux"]

# Include support for the Debian backend
debian = ["paketkoll_core/debian"]

# Include support for the systemd-tmpfiles backend (EXPERIMENTAL)
systemd_tmpfiles = ["paketkoll_core/systemd_tmpfiles"]

# Include support for exporting to JSON
json = ["dep:serde", "dep:serde_json"]

# Vendor C/C++ dependencies instead of linking them dynamically
vendored = ["paketkoll_core/vendored"]

[dependencies]
ahash.workspace = true
clap.workspace = true
color-eyre.workspace = true
compact_str.workspace = true
eyre.workspace = true
ignore.workspace = true
os_info.workspace = true
paketkoll_core = { version = "0.5.10", path = "../paketkoll_core" }
paketkoll_types = { version = "0.2.4", path = "../paketkoll_types" }
paketkoll_workspace_hack = { version = "0.1", path = "../paketkoll_workspace_hack" }
proc-exit.workspace = true
rayon.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(target_env = "musl")'.dependencies]
# The allocator on musl is attrociously slow, so we use a custom one.
# Jemalloc doesn't work reliably on Aarch64 due to varying page size, so use
# the slightly slower mimalloc instead.
mimalloc.workspace = true

[lints]
workspace = true
