[package]
categories = ["filesystem", "os::linux-apis"]
description = "Check installed distro files for changes (caching library)"
edition = "2021"
keywords = ["package-management"]
license = "MPL-2.0"
name = "paketkoll_cache"
repository = "https://github.com/VorpalBlade/paketkoll"
rust-version = "1.80.0"
version = "0.2.2"

[dependencies]
ahash.workspace = true
anyhow.workspace = true
cached.workspace = true
compact_str.workspace = true
dashmap.workspace = true
paketkoll_types = { version = "0.1.3", path = "../paketkoll_types", features = [
    "serde",
] }
serde.workspace = true
tracing.workspace = true

[lints]
workspace = true
