[package]
categories = ["filesystem", "os::linux-apis"]
description = "Check installed distro files for changes (caching library)"
edition = "2024"
keywords = ["package-management"]
license = "MPL-2.0"
name = "paketkoll_cache"
repository = "https://github.com/VorpalBlade/paketkoll"
rust-version = "1.85.0"
version = "0.2.11"

[dependencies]
ahash.workspace = true
cached.workspace = true
compact_str.workspace = true
dashmap.workspace = true
eyre.workspace = true
paketkoll_types = { version = "0.2.6", path = "../paketkoll_types" }
paketkoll_workspace_hack = { version = "0.1", path = "../paketkoll_workspace_hack" }
serde.workspace = true
smallvec.workspace = true
tracing.workspace = true

[lints]
workspace = true
