[package]
categories = ["filesystem", "os::linux-apis"]
description = "Check installed distro files for changes (core library)"
edition = "2021"
keywords = ["apt", "arch-linux", "debian", "pacman", "package-management"]
license = "MPL-2.0"
name = "paketkoll_core"
repository = "https://github.com/VorpalBlade/paketkoll"
rust-version = "1.79.0"
version = "0.4.1"

    [package.metadata.docs.rs]
    default-target = "x86_64-unknown-linux-gnu"
    features = ["arch_linux", "debian"]
    # Other targets make no difference, and we only support Linux
    targets = []

[features]
# Default features
default = []

# Include the Arch Linux backend
arch_linux = [
    "__extraction",
    "__gzip",
    "__sha256",
    "__zstd",
    "dep:mtree2",
    "dep:rust-ini",
]

systemd_tmpfiles = ["__sha256", "dep:systemd_tmpfiles", "dep:nix"]

# Include support for the Debian backend
debian = [
    "__bzip2",
    "__extraction",
    "__gzip",
    "__md5",
    "__xz",
    "__zstd",
    "dashmap/rayon",
    "dep:ar",
]

# Include support for serde on public datatypes
serde = [
    "compact_str/serde",
    "dep:serde",
    "paketkoll_types/serde",
    "smallvec/serde",
]

# Internal feature: Enable MD5 support
__md5 = ["dep:md-5"]
# Internal feature: Enable SHA-256 support
__sha256 = ["dep:ring"]
# Internal feature for decompression
__bzip2 = ["dep:bzip2"]
# Internal feature for decompression
__gzip = ["dep:flate2"]
# Internal feature for decompression
__xz = ["dep:xz2"]
# Internal feature for decompression
__zstd = ["dep:zstd"]
# Internal feature for package extraction
__extraction = ["dep:glob", "dep:tar"]

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true, features = ["backtrace"] }
ar = { workspace = true, optional = true }
bstr = { workspace = true }
bzip2 = { workspace = true, optional = true }
cfg-if = { workspace = true }
compact_str = { workspace = true, features = ["smallvec"] }
dashmap = { workspace = true }
derive_builder = { workspace = true }
either = { workspace = true }
faster-hex = { workspace = true, features = ["std"] }
flate2 = { workspace = true, optional = true }
flume = { workspace = true }
glob = { workspace = true, optional = true }
ignore = { workspace = true, features = ["simd-accel"] }
lasso = { workspace = true, features = [
    "ahasher",
    "inline-more",
    "multi-threaded",
] }
libc = { workspace = true }
log = { workspace = true }
md-5 = { workspace = true, optional = true }
mtree2 = { version = "0.6.1", path = "../mtree2", optional = true }
nix = { workspace = true, features = ["user"], optional = true }
num_cpus = { workspace = true }
paketkoll_types = { version = "0.1.0", path = "../paketkoll_types" }
phf = { workspace = true, features = ["macros"] }
rayon = { workspace = true }
regex = { workspace = true }
ring = { workspace = true, optional = true }
rust-ini = { workspace = true, optional = true }
scopeguard = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
smallvec = { workspace = true, features = [
    "const_generics",
    "const_new",
    "union",
] }
strum = { workspace = true, features = ["derive"] }
systemd_tmpfiles = { version = "0.1.1", path = "../systemd_tmpfiles", optional = true }
tar = { workspace = true, optional = true }
xz2 = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }

[dev-dependencies]
indoc = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true
